# FEUP-AEDA

./: .gitignore  .gitmodules
TP/TP1/: CMakeLists.txt  main.cpp
TP/TP1/Tests/: parque.cpp  parque.h  tests.cpp
TP/TP2/: CMakeLists.txt
TP/TP2.5/: CMakeLists.txt
TP/TP2.5/Tests/: animal.cpp  animal.h  tests.cpp  veterinary.cpp  zoo.cpp  zoo.h
TP/TP2.5/docs/: Doxyfile
TP/TP2/Tests/: fleet.cpp  fleet.h  tests.cpp  vehicle.cpp  vehicle.h
TP/TP3/: CMakeLists.txt
TP/TP3/Tests/: graph.h
TP/TP3/docs/: Doxyfile
TP/TP3/docs/output/html/: annotated.html  class_edge-members.html  class_edge.html  class_edge_already_exists-members.html  class_edge_already_exists.html  class_edge_does_not_exist-members.html  class_edge_does_not_exist.html  class_graph-members.html  class_graph.html  class_node-members.html  class_node.html  class_node_already_exists-members.html  class_node_already_exists.html  class_node_does_not_exist-members.html  class_node_does_not_exist.html  classes.html  dir_33c78a012c8d08979f57a54a07694c46.html  files.html  functions.html  functions_func.html  functions_vars.html  graph_8h_source.html  index.html
TP/TP3/docs/output/html/search/: all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  classes_0.js  classes_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js
TP/TP4/: CMakeLists.txt
TP/TP4/Tests/: ClientDoesNotExist.cpp  ClientDoesNotExist.h  PositionDoesNotExiste.cpp  PositionDoesNotExiste.h  carPark.cpp  carPark.h  tests.cpp
TP/TP5/: CMakeLists.txt
TP/TP5/Tests/: game.cpp
TP/TP6/: CMakeLists.txt
TP/TP6/Tests/: counter.cpp  stackExt.h  tests.cpp
TP/TP7/: CMakeLists.txt
TP/TP7/Tests/: binaryTree.h  dictionary.cpp  dictionary.h  game.cpp  game.h  tests.cpp
TP/TP8/: CMakeLists.txt
TP/TP8/Tests/: bet.cpp  player.cpp  player.h
TP/TP9/: CMakeLists.txt
TP/TP9/Tests/: box.cpp  packagingMachine.cpp  tests.cpp
Tests/2015-2016/T4/Tests/: Cinema.cpp  CinemaFinder.cpp  CinemaFinder.h  FilmTime.cpp  tests.cpp
Tests/2018-2019/T1/: CMakeLists.txt
Tests/2018-2019/T1/Tests/: Account.cpp  Account.h  Bank.cpp  Bank.h  BankOfficer.cpp  BankOfficer.h  tests.cpp  utils.h
Tests/2018-2019/T2/: CMakeLists.txt
Tests/2018-2019/T2/Tests/: CSimpleList.h  CStack.h  Kart.cpp  Kart.h  tests.cpp
Tests/2018-2019/T3/Tests/: Client.cpp  PropertyTypeItem.cpp  REAgency.cpp  REAgency.h
Tests/2019-2020/T1/: CMakeLists.txt
Tests/2019-2020/T1/Tests/: Hotel.h  Room.cpp  Room.h  tests.cpp
Tests/2019-2020/T2/: CMakeLists.txt
Tests/2019-2020/T2/Tests/: Box.cpp  ThinTallBox.cpp  Warehouse.cpp  WideFlatBox.cpp  WideFlatBox.h  tests.cpp
Tests/2019-2020/T3/Tests/: Gallery.cpp  Gallery.h  Paint.cpp
